--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,8 +33,7 @@ collections:
           - {label: Subheading, name: subheading, widget: string}
           - {label: About, name: about, widget: object, fields: [{label: Section Title, name: title, widget: string}, {label: Description, name: description, widget: text}]}
           - {label: Contact, name: contact, widget: object, fields: [{label: Section Title, name: title, widget: string}, {label: Location, name: location, widget: string}]}
-          - {label: Skills, name: skills, widget: object, fields: [{label: Section Title, name: title, widget: string}, {label: Subtitle, name: subtitle, widget: string}]}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
+          - {label: Skills, name: skills, widget: object, fields: [{label: Section Title, name: title, widget: string}, {label: Subtitle, name: subtitle, widget: string}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: string}]}]}
           - {label: Main, name: main, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Image1, name: image1, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image2, name: image2, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image3, name: image3, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}]}
       - file: "src/pages/about/index.md"
         label: "About"
