--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "steve-wisner-portfolio-with-csm",
+  "description": "Portfolio website for Steve Wisner, creator of Property Data Generator.",
+  "version": "1.0.0",
+  "author": "Steve Wisner",
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.1.34",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-google-analytics": "^2.0.19",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.15",
+    "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
@@ -49,6 +51,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "http-proxy-middleware": "^0.19.1",
     "netlify-lambda": "^1.4.3",
     "npm-run-all": "^4.1.5",
