--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "author": "Steve Wisner",
   "engines": {
-    "node": "10"
+    "node": "10",
+    "npm": "6.14.12",
+    "yarn": "1.22.19"
   },
   "dependencies": {
     "bulma": "^0.7.0",
