--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "yarn build"
   functions = "lambda"
 [build.environment]
+  NODE_VERSION = "10.24.1"
   YARN_VERSION = "1.9.4"
-  YARN_FLAGS = "--no-ignore-optional"
