--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Steve Wisner",
   "engines": {
     "node": "10",
-    "yarn": "1.9.4",
-    "npm": "6.14.12"
+    "yarn": "1.9.4"
   },
   "dependencies": {
     "bulma": "^0.7.0",
