--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "netlify-deploy": "netlify deploy --prod"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
